--- a/packages/cmrjs/package.json
+++ b/packages/cmrjs/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@cumulus/cmrjs",
+  "name": "@cumulus-test/cmrjs",
   "version": "1.0.0",
   "description": "A node SDK for CMR",
   "scripts": {
@@ -15,7 +15,7 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus/common": "^1.0.0",
+    "@cumulus-test/common": "^1.0.0",
     "got": "^7.1.0",
     "lodash.property": "^4.4.2",
     "public-ip": "^2.3.5",
