--- a/packages/cmrjs/package.json
+++ b/packages/cmrjs/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus-test/cmrjs",
-  "version": "1.0.2",
+  "version": "1.0.2-beta.0",
   "description": "A node SDK for CMR",
   "scripts": {
     "test": "echo 'no tests'"
@@ -15,7 +15,7 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus-test/common": "^1.0.2",
+    "@cumulus-test/common": "^1.0.2-beta.0",
     "got": "^7.1.0",
     "lodash.property": "^4.4.2",
     "public-ip": "^2.3.5",
