--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus-test/common",
-  "version": "1.0.2",
+  "version": "1.0.2-beta.0",
   "description": "Common utilities used across tasks",
   "keywords": [
     "GIBS"
@@ -19,7 +19,7 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus-test/test-data": "^1.0.2",
+    "@cumulus-test/test-data": "^1.0.2-beta.0",
     "ajv": "^5.0.4-beta.3",
     "ajv-cli": "^1.1.1",
     "async": "^2.0.0",
