--- a/packages/ingest/package.json
+++ b/packages/ingest/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus-test/ingest",
-  "version": "1.0.2",
+  "version": "1.0.2-beta.0",
   "description": "Ingest utilities",
   "scripts": {
     "test": "ava test/*.js"
@@ -29,9 +29,9 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus-test/common": "^1.0.2",
-    "@cumulus-test/pvl": "^1.0.2",
-    "@cumulus-test/test-data": "^1.0.2",
+    "@cumulus-test/common": "^1.0.2-beta.0",
+    "@cumulus-test/pvl": "^1.0.2-beta.0",
+    "@cumulus-test/test-data": "^1.0.2-beta.0",
     "aws-sdk": "^2.4.11",
     "checksum": "^0.1.1",
     "cksum": "^1.3.0",
@@ -42,7 +42,7 @@
     "moment": "^2.6.0",
     "node-forge": "^0.7.1",
     "pino": "^4.7.1",
-    "pump": "^1.0.2",
+    "pump": "^1.0.2-beta",
     "simplecrawler": "^1.1.4",
     "ssh2": "^0.5.5",
     "url-join": "^1.0.0"
