--- a/packages/pvl/package.json
+++ b/packages/pvl/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus-test/pvl",
-  "version": "1.0.2",
+  "version": "1.0.2-beta.0",
   "description": "Parse and serialize Parameter Value Language, a data markup language used by NASA",
   "main": "index.js",
   "scripts": {
