--- a/packages/task-debug/package.json
+++ b/packages/task-debug/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus-test/task-debug",
-  "version": "1.0.2",
+  "version": "1.0.2-beta.0",
   "description": "A harness for debugging workflows.",
   "main": "index.js",
   "repository": {
@@ -17,7 +17,7 @@
     "test": "test"
   },
   "dependencies": {
-    "@cumulus-test/common": "^1.0.2",
+    "@cumulus-test/common": "^1.0.2-beta.0",
     "commander": "^2.11.0"
   },
   "devDependencies": {
