--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -16,12 +16,12 @@ jobs:
             - core-
 
       - run:
-          name: core installation 
+          name: core installation
           command: |
             yarn install
 
             # generate global hash
-            ./node_modules/.bin/lerna exec --concurrency 1 -- sha1sum package.json | awk '{print $1}' '' >> /home/circleci/project/global-hash 
+            ./node_modules/.bin/lerna exec --concurrency 1 -- sha1sum package.json | awk '{print $1}' '' >> /home/circleci/project/global-hash
 
       - save_cache:
           paths:
@@ -89,6 +89,7 @@ jobs:
             - ./cumulus/tasks/queue-pdrs/node_modules
             - ./cumulus/tasks/sync-granule/node_modules
             - ./cumulus/tasks/discover-s3-granules/node_modules
+            - ./cumulus/tasks/sf-sns-report/node_modules
 
       - save_cache:
           key: gitc-tasks-{{ checksum "global-hash" }}
@@ -115,13 +116,13 @@ jobs:
             - ./cumulus/tasks/discover-pdr/node_modules
             - ./cumulus/tasks/generate-pdr-file-list/node_modules
             - ./cumulus/tasks/validate-pdr/node_modules
-      
+
       - save_cache:
           key: services-{{ checksum "global-hash" }}
           paths:
             - ./cumulus/services/sfn-scheduler/node_modules
             - ./cumulus/services/sfn-throttler/node_modules
-      
+
 
       - run:
           name: Running Tests
@@ -134,7 +135,7 @@ jobs:
           environment:
             LOCALSTACK_HOST: localstack
           command: yarn e2e
-      
+
       - run:
           name: Running AWS Integration Tests
           command: |
@@ -152,8 +153,8 @@ jobs:
               cd ~/project
 
               # run the build command on the packages used on the integration tests
-              cat ../integration/cumulus_integration_tests_packages.txt | xargs -I % ./node_modules/.bin/lerna exec --scope % -- yarn build 
-              
+              cat ../integration/cumulus_integration_tests_packages.txt | xargs -I % ./node_modules/.bin/lerna exec --scope % -- yarn build
+
               # run the yarn link on packages used on the integration tests
               cat ../integration/cumulus_integration_tests_packages.txt | xargs -I % ./node_modules/.bin/lerna exec --scope % -- yarn link
               cd ~/integration
@@ -167,7 +168,11 @@ jobs:
               # run the tests
               yarn test
             fi
-      
+
+      - run:
+          name: Running eslint-ratchet
+          command: ./bin/eslint-ratchet ci
+
   build_and_publish:
     docker:
       - image: circleci/node:6.10
