--- a/cumulus/tasks/delete-pdr-s3/package.json
+++ b/cumulus/tasks/delete-pdr-s3/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@cumulus/delete-pdr-s3",
   "private": true,
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "SIPS handler PDR discovery task",
   "main": "index.js",
   "keywords": [
@@ -18,7 +18,7 @@
     "test": "test"
   },
   "scripts": {
-    "test": "env TEST=true ava"
+    "test": "ava"
   },
   "ava": {
     "files": [
@@ -39,7 +39,7 @@
     ]
   },
   "dependencies": {
-    "@cumulus/common": "^1.1.3",
+    "@cumulus/common": "^1.2.0",
     "ftp": "^0.3.10",
     "node-fetch": "^1.6.1",
     "parse-duration": "^0.1.1",
@@ -51,7 +51,7 @@
   "devDependencies": {
     "@ava/babel-preset-stage-4": "^1.1.0",
     "@ava/babel-preset-transform-test-files": "^3.0.0",
-    "ava": "^0.21.0",
+    "ava": "^0.23.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.23.0",
