--- a/cumulus/tasks/discover-granules/package.json
+++ b/cumulus/tasks/discover-granules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus/discover-granules",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "Discover Granules in FTP/HTTP/SFTP endpoints",
   "main": "index.js",
   "directories": {
@@ -11,7 +11,7 @@
     "url": "https://github.com/cumulus-nasa/cumulus"
   },
   "scripts": {
-    "test": "env TEST=true ava",
+    "test": "ava",
     "local": "node index.js | pino",
     "build": "webpack --progress",
     "watch": "webpack --progress -w",
@@ -37,10 +37,10 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus/common": "^1.1.3",
+    "@cumulus/common": "^1.2.0",
     "@cumulus/cumulus-message-adapter-js": "^1.0.1",
-    "@cumulus/ingest": "^1.1.4",
-    "@cumulus/test-data": "^1.1.3",
+    "@cumulus/ingest": "^1.2.0",
+    "@cumulus/test-data": "^1.2.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.23.0",
@@ -52,7 +52,7 @@
   "devDependencies": {
     "@ava/babel-preset-stage-4": "^1.1.0",
     "@ava/babel-preset-transform-test-files": "^3.0.0",
-    "ava": "^0.21.0",
+    "ava": "^0.23.0",
     "fs-extra": "^5.0.0",
     "lodash.clonedeep": "^4.5.0"
   }
