--- a/cumulus/tasks/discover-s3-granules/package.json
+++ b/cumulus/tasks/discover-s3-granules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus/discover-s3-granules",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "Discover granules from an S3 bucket",
   "main": "index.js",
   "directories": {
@@ -14,18 +14,20 @@
     "access": "public"
   },
   "scripts": {
-    "test": "env TEST=true ava tests/*.js --serial",
+    "test": "ava",
     "local": "node index.js | pino",
     "build": "webpack --progress",
     "watch": "webpack --progress -w",
     "postinstall": "npm run build"
   },
   "ava": {
+    "files": "tests",
     "babel": "inherit",
     "require": [
       "babel-polyfill",
       "babel-register"
-    ]
+    ],
+    "serial": true
   },
   "babel": {
     "presets": [
@@ -35,22 +37,22 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus/common": "^1.1.3",
+    "@cumulus/common": "^1.2.0",
     "@cumulus/cumulus-message-adapter-js": "^1.0.1",
-    "@cumulus/ingest": "^1.1.4",
-    "@cumulus/test-data": "^1.1.3",
+    "@cumulus/ingest": "^1.2.0",
+    "@cumulus/test-data": "^1.2.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^6.2.4",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2017": "^6.24.1",
     "json-loader": "~0.5.7",
     "lodash.get": "^4.4.2",
-    "moment": "2.18.1",
+    "moment": "^2.21.0",
     "webpack": "~1.12.13"
   },
   "devDependencies": {
     "@ava/babel-preset-stage-4": "^1.1.0",
     "@ava/babel-preset-transform-test-files": "^3.0.0",
-    "ava": "^0.21.0"
+    "ava": "^0.23.0"
   }
 }
