--- a/cumulus/tasks/queue-granules/package.json
+++ b/cumulus/tasks/queue-granules/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus/queue-granules",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "Add discovered granules to the queue",
   "main": "index.js",
   "directories": {
@@ -14,7 +14,7 @@
     "access": "public"
   },
   "scripts": {
-    "test": "env TEST=true ava",
+    "test": "ava",
     "build": "webpack --progress",
     "watch": "webpack --progress -w",
     "postinstall": "npm run build"
@@ -38,9 +38,9 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus/common": "^1.1.3",
+    "@cumulus/common": "^1.2.0",
     "@cumulus/cumulus-message-adapter-js": "^1.0.1",
-    "@cumulus/ingest": "^1.1.4",
+    "@cumulus/ingest": "^1.2.0",
     "babel-core": "^6.25.0",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-async-to-generator": "^6.24.1",
@@ -52,7 +52,7 @@
   },
   "devDependencies": {
     "@mapbox/mock-aws-sdk-js": "0.0.5",
-    "ava": "^0.21.0",
+    "ava": "^0.23.0",
     "lodash": "^4.17.5"
   }
 }
