--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "1.0.0",
   "description": "Cumulus Framework for ingesting and processing Nasa Earth data streams",
   "scripts": {
-    "e2e": "env TEST=true ava tests/*.js --serial",
+    "e2e": "ava tests/*.js --serial",
     "test": "lerna run test",
     "bootstrap": "lerna bootstrap",
     "ybootstrap": "lerna bootstrap --npm-client=yarn",
@@ -44,14 +44,14 @@
   "devDependencies": {
     "ava": "^0.25.0",
     "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^8.2.2",
     "babel-loader": "^6.2.4",
     "babel-plugin-transform-async-to-generator": "^6.8.0",
     "babel-polyfill": "^6.13.0",
     "babel-preset-es2015": "^6.13.2",
     "babel-preset-es2017": "^6.24.1",
     "copy-webpack-plugin": "^4.0.1",
-    "eslint": "^3.2.2",
+    "eslint": "^4.18.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsdoc": "^3.3.1",
