--- a/packages/common/package.json
+++ b/packages/common/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@cumulus/common",
-  "version": "1.1.3",
+  "version": "1.2.0",
   "description": "Common utilities used across tasks",
   "keywords": [
     "GIBS",
@@ -18,7 +18,7 @@
     "lint": "eslint .",
     "mocha": "mocha-webpack test/**/*.js",
     "mocha-junit": "npm run mocha -- --reporter mocha-junit-reporter --reporter-options mochaFile=test-results.xml",
-    "test": "npm run mocha && env TEST=true ava",
+    "test": "npm run mocha && ava",
     "test-ci": "npm run lint && npm run mocha-junit"
   },
   "ava": {
@@ -44,17 +44,17 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus/test-data": "^1.1.3",
+    "@cumulus/test-data": "^1.2.0",
     "ajv": "^5.0.4-beta.3",
     "ajv-cli": "^1.1.1",
     "async": "^2.0.0",
     "aws-sdk": "^2.4.11",
     "babel-core": "^6.13.2",
-    "babel-eslint": "^6.1.2",
+    "babel-eslint": "^8.2.2",
     "babel-polyfill": "^6.13.0",
     "babel-preset-env": "^1.6.1",
     "cwait": "^1.0.0",
-    "eslint": "^3.2.2",
+    "eslint": "^4.18.2",
     "eslint-config-airbnb": "^10.0.0",
     "eslint-plugin-import": "^1.13.0",
     "eslint-plugin-jsx-a11y": "^2.1.0",
@@ -66,7 +66,7 @@
     "glob": "^7.1.1",
     "js-yaml": "^3.8.3",
     "lodash": "^4.13.1",
-    "mocha": "^2.5.3",
+    "mocha": "^5.0.4",
     "mocha-junit-reporter": "^1.11.1",
     "mocha-webpack": "^0.7.0",
     "prepend-loader": "0.0.2",
