--- a/packages/ingest/package.json
+++ b/packages/ingest/package.json
@@ -1,9 +1,9 @@
 {
   "name": "@cumulus/ingest",
-  "version": "1.1.4",
+  "version": "1.2.0",
   "description": "Ingest utilities",
   "scripts": {
-    "test": "env TEST=true ava"
+    "test": "ava"
   },
   "publishConfig": {
     "access": "public"
@@ -38,9 +38,9 @@
   "author": "Cumulus Authors",
   "license": "Apache-2.0",
   "dependencies": {
-    "@cumulus/common": "^1.1.3",
-    "@cumulus/pvl": "^1.0.0",
-    "@cumulus/test-data": "^1.1.3",
+    "@cumulus/common": "^1.2.0",
+    "@cumulus/pvl": "^1.2.0",
+    "@cumulus/test-data": "^1.2.0",
     "aws-sdk": "^2.4.11",
     "babel-core": "^6.25.0",
     "babel-loader": "^6.2.4",
@@ -57,7 +57,7 @@
     "lodash": "^4.17.5",
     "lodash.get": "^4.4.2",
     "mkdirp": "^0.5.1",
-    "moment": "^2.6.0",
+    "moment": "^2.21.0",
     "node-forge": "^0.7.1",
     "pino": "^4.7.1",
     "pump": "^1.0.2",
