--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -139,7 +139,11 @@ jobs:
       - checkout
       - run:
           name: Install Dependencies
-          command: yarn
+          command: |
+            # checkout the latest tag
+            LATEST_GIT_TAG=$(git describe --tags --abbrev=0 --match v*)
+            git checkout tags/$LATEST_GIT_TAG -b latest_git_tag
+            yarn
 
       - run:
           name: Publishing to NPM
@@ -159,4 +163,4 @@ workflows:
             - build_and_test
           filters:
             branches:
-              only: release 
+              only: release-version-1.3.0 
